--- a/client/src/components/auth/Login/Login.css
+++ b/client/src/components/auth/Login/Login.css
@@ -3409,7 +3409,9 @@
     }
   }
   
-  
+  .purple-button {
+	  background-color: #6610f2 !important;
+  }
   /*//////////////////////////////////////////////////////////////////
   [ Responsive ]*/
   
