invoice pay_limit

--- a/client/src/components/Insurances/InsuranceForm/InsuranceForm.css
+++ b/client/src/components/Insurances/InsuranceForm/InsuranceForm.css
@@ -66,4 +66,6 @@
   .react-autosuggest__suggestion--highlighted {
     background-color: #ddd;
   }
-  
+
+  .jumbotron {position:relative;}
+  .buttonjumbotron {position:absolute; top:10pt; right:10pt;}
